Add setting also hide application/x-trash files when hiding hidden files

BUG: 475805